--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Prayer Sender</title>
+    <title>Eff U sender</title>
 </head>
 <body>
     <h1>Prayer Status</h1>
-    <p id="custom-text">Please wait, your prayer is sending...</p>
+    <p id="custom-text">Eff u is sending, please wait...</p>
 
     <script src="script.js"></script>
 </body>
