--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Prayer Status</h1>
+    <h1>Eff U Status</h1>
     <p id="custom-text">Eff u is sending, please wait...</p>
 
     <script src="script.js"></script>
